services/analytics-svc/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-svc
  labels:
    app: analytics-svc
    app.kubernetes.io/part-of: ecommerce-platform
spec:
  type: ClusterIP
  selector:
    app: analytics-svc
  ports:
    - name: http
      port: 8096
      targetPort: http
